--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -16,7 +16,7 @@
 			Your browser doesn't support the Canvas Element!
 		</canvas>
 		<center>
-			<h1>Use the following keys to move the car</h1>
+			<h1>Use the following keys to move the drone</h1>
 			<table border="1">
 			  <tr>
 				<td>&nbsp;</td>
