Added classes and configurations

--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -3,8 +3,13 @@
 	<head>
 		<title>Drone Simulator</title>
 		<script src="static/lib/quaternion.min.js"></script>
+		<script src="static/lib/gl-matrix.min.js"></script>
 		<script src="static/lib/utils.js"></script>
 		<script src="static/lib/webgl-obj-loader.min.js"></script>
+		<script src="static/camera.js"></script>
+		<script src="static/controls.js"></script>
+		<script src="static/drone.js"></script>
+		<script src="static/terrain.js"></script>
 		<script src="static/app.js"></script>
 	</head>
 	
