--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -10,9 +10,11 @@
 		<script src="static/controls.js"></script>
 		<script src="static/drone.js"></script>
 		<script src="static/terrain.js"></script>
+		<script src="static/chunkManager.js"></script>
+		<script src="static/chunk.js"></script>
 		<script src="static/app.js"></script>
 	</head>
-	
+
 	<body style="background-color: grey;" onLoad="main();">
 		<canvas id="drone-sim-canvas" width='800' height='450' style="background-color: white;">
 			Your browser doesn't support the Canvas Element!
