added texture class, applytransform and texture attribute to objects

--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -12,6 +12,7 @@
 		<script src="static/terrain.js"></script>
 		<script src="static/chunkManager.js"></script>
 		<script src="static/chunk.js"></script>
+		<script src="static/texture.js"></script>
 		<script src="static/app.js"></script>
 	</head>
 
