--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -10,6 +10,7 @@
 		<script src="static/controls.js"></script>
 		<script src="static/drone.js"></script>
 		<script src="static/terrain.js"></script>
+		<script src="static/skyBox.js"></script>
 		<script src="static/chunkManager.js"></script>
 		<script src="static/chunk.js"></script>
 		<script src="static/texture.js"></script>
