--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -4,10 +4,12 @@
 		<title>Drone Simulator</title>
 		<script src="static/lib/quaternion.min.js"></script>
 		<script src="static/lib/gl-matrix.min.js"></script>
-		<script src="static/lib/utils.js"></script>
 		<script src="static/lib/webgl-obj-loader.min.js"></script>
+		<script src="static/lib/utils.js"></script>
 		<script src="static/camera.js"></script>
 		<script src="static/controls.js"></script>
+		<script src="static/light.js"></script>
+		<script src="static/worldobject.js"></script>
 		<script src="static/drone.js"></script>
 		<script src="static/terrain.js"></script>
 		<script src="static/skyBox.js"></script>
