--- a/dronesim/templates/index.html
+++ b/dronesim/templates/index.html
@@ -26,37 +26,37 @@
 	<body style="background-color: grey;" onLoad="main();">
 		<div id= "nav">
 			<div  id="first_line" class="flex" height="40px" width="100%">
-					<div class="flex w10"  onmouseover="toggleOnExclusive('dirLightMenu')">
+					<div class="flex w10"  onclick="toggleOnExclusive('dirLightMenu')">
 					<a id="dirLightMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 Direct light </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('ambLightMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('ambLightMenu')">
 					<a id="ambLightMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 Ambient light </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('po1LightMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('po1LightMenu')">
 					<a id="po1LightMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 1st Point light </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('po2LightMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('po2LightMenu')">
 					<a id="po2LightMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 2nd Point light </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('po3LightMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('po3LightMenu')">
 					<a id="po3LightMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 3rd Point light </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('skyboxMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('skyboxMenu')">
 					<a id="skyboxMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 Skybox </a>
 				  </div>
-					<div class="flex w10"   onmouseover="toggleOnExclusive('droneMenu')">
+					<div class="flex w10"   onclick="toggleOnExclusive('droneMenu')">
 					<a id="droneMenuHeader" class="nav-item" href="#" role="button" height="30">
 						 Drone </a>
 				  </div>
 				</div>
 					<div id="second_line" height="40px" width="100%">
-						<div  id="dirLightMenu"  onmouseover="toggleOnExclusive('dirLightMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="dirLightMenu" aria-labelledby="navbarDropdown" style="display:flex" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="dirCol" type="color"value="#FFFFFF" onchange="setColor('dirCol')"> </a>
 								<a class="nav-item" href="#">Direction -->
 									<a class="nav-item" href="#">X coor: <input id="dirX" type=number step=0.01 min="-1" max="1" onchange="setDir('dirX')"/></a>
@@ -66,12 +66,12 @@
 								<a id="switchOnDir" class="nav-item" href="#" onclick="switchElem('Dir')"> switch OFF</a>
 								<a id="switchOffDir" class="nav-item" href="#" onclick="switchElem('Dir')" style="display:none"> switch ON</a>
 						</div>
-						<div id="ambLightMenu"onmouseover="toggleOnExclusive('ambLightMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div id="ambLightMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="ambCol" type="color"value="#191919" onchange="setColor('ambCol')"> </a>
 								<a id="switchOnAmb" class="nav-item" href="#" onclick="switchElem('Amb')"> switch OFF</a>
 								<a id="switchOffAmb" class="nav-item" href="#" onclick="switchElem('Amb')" style="display:none"> switch ON</a>
 						</div>
-						<div  id="po1LightMenu"  onmouseover="toggleOnExclusive('po1LightMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="po1LightMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="po1Col" type="color"value="#FFFFFF" onchange="setColor('po1Col')"> </a>
 								<a class="nav-item" href="#">Position -->
 									<a class="nav-item" href="#">X coor: <input id="po1X" type=number step=0.1 onchange="setCor('po1X')"/></a>
@@ -83,7 +83,7 @@
 								<a id="switchOnPo1" class="nav-item" href="#" onclick="switchElem('Po1')"> switch OFF</a>
 								<a id="switchOffPo1" class="nav-item" href="#" onclick="switchElem('Po1')" style="display:none"> switch ON</a>
 						</div>
-						<div  id="po2LightMenu"  onmouseover="toggleOnExclusive('po2LightMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="po2LightMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="po2Col" type="color"value="#FFFFFF" onchange="setColor('po2Col')"> </a>
 								<a class="nav-item" href="#">Position -->
 									<a class="nav-item" href="#">X coor: <input id="po2X" type=number step=0.1 onchange="setCor('po2X')"/></a>
@@ -95,7 +95,7 @@
 								<a id="switchOnPo2" class="nav-item" href="#" onclick="switchElem('Po2')"> switch OFF</a>
 								<a id="switchOffPo2" class="nav-item" href="#" onclick="switchElem('Po2')" style="display:none"> switch ON</a>
 						</div>
-						<div  id="po3LightMenu"  onmouseover="toggleOnExclusive('po3LightMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="po3LightMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="po3Col" type="color"value="#FFFFFF" onchange="setColor('po3Col')"> </a>
 								<a class="nav-item" href="#">Position -->
 									<a class="nav-item" href="#">X coor: <input id="po3X" type=number step=0.1 onchange="setCor('po3X')"/></a>
@@ -107,13 +107,13 @@
 								<a id="switchOnPo3" class="nav-item" href="#" onclick="switchElem('Po3')"> switch OFF</a>
 								<a id="switchOffPo3" class="nav-item" href="#" onclick="switchElem('Po3')" style="display:none"> switch ON</a>
 						</div>
-						<div  id="skyboxMenu"  onmouseover="toggleOnExclusive('skyboxMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="skyboxMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#"> Colour: <input id="skyCol" type="color"value="#7F7FFE" onchange="setColor('skyCol')"> </a>
 
 								<a id="switchOnSky" class="nav-item" href="#" onclick="switchElem('Sky')"> switch sky OFF</a>
 								<a id="switchOffSky" class="nav-item" href="#" onclick="switchElem('Sky')" style="display:none"> switch sky ON</a>
 						</div>
-						<div  id="droneMenu"  onmouseover="toggleOnExclusive('droneMenu')" aria-labelledby="navbarDropdown" style="display:none" width="150">
+						<div  id="droneMenu" aria-labelledby="navbarDropdown" style="display:none" width="150">
 								<a class="nav-item" href="#">Position -->
 									<a class="nav-item" href="#">X coor: <input id="droX" type=number step=0.1 onchange="setCor('droX')"/></a>
 									<a class="nav-item" href="#">Y coor: <input id="droY" type=number step=0.1 onchange="setCor('droY')"/></a>
